upgrade affinity version